# Yasminebackend

./: README.md
Yasminba/: README.md  demo_check.py  predict_cli.py  pyproject.toml  requirements.txt  visualize_sessions_by_disease.py
Yasminba/app/: main.py
Yasminba/data/: disease_classifier.joblib  feature_scaler.joblib  label_encoder.joblib  symptoms_vectorizer.joblib  synthetic_dataset.csv
Yasminba/ml/: evaluate.py  model.py  train.py
Yasminba/tests/: smoke_test.py
