[project]
name = "clinicalmind"
version = "0.1.0"
description = "Therapeutic session prediction microservice (synthetic demo)"
authors = [{ name = "CLINICALMIND" }]
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.5",
  "uvicorn==0.32.0",
  "pydantic==2.9.2",
  "scikit-learn==1.5.2",
  "pandas==2.2.3",
  "numpy==2.1.3",
  "joblib==1.4.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
